-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9.4, 5.11.0 Beta 2
-
None
This causes several of our tests to crash (as they use fake input)
- is duplicated by
-
QTBUG-66814 tst_QWindow::touchInterruptedByPopup() crashes on wayland
-
- Closed
-
-
QTBUG-66980 tst_QAccessibility::comboBoxTest crash on Wayland
-
- Closed
-
-
QTBUG-66979 tst_QAccessibility::menutest crashes on Wayland
-
- Closed
-
-
QTBUG-66988 tst_QFocusEvent::checkReason_Popup crashes on Wayland
-
- Closed
-
For Gerrit Dashboard: QTBUG-67150 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
223693,3 | xdg-shell v5,v6 shell integrations: Fix crash when showing popups | 5.11 | qt/qtwayland | Status: MERGED | +2 | 0 |
224192,2 | xdg-shell v5,v6 shell integrations: Fix crash when showing popups | 5.9 | qt/qtwayland | Status: MERGED | +2 | 0 |