xdg-shell v5,v6 shell integrations: Fix crash when showing popups

If a popup was shown without any input events happening first, it would cause
nullptr dereferences in both xdg-shell v5 and v6.

Fixes crashes in:

- tst_QAccessibility::comboBoxTest
- tst_QAccessibility::menuTest
- tst_QWindow::touchInterruptedByPopup
- tst_QFocusEvent::checkReason_Popup

Task-number: QTBUG-67150
Change-Id: Ib3e06326f71e4ab5f74727cb4f79626a21c34d55
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>
(cherry picked from commit 26a6372bb0c6528358e34f8175a14ff0be47fb12)
Reviewed-by: David Edmundson <davidedmundson@kde.org>